--- a/public/css/z.css
+++ b/public/css/z.css
@@ -52,7 +52,7 @@ fieldset
 	-webkit-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
 	background: #f6f6f6;
 	border: 1px solid #c4c4c4;
-	margin: 10px;
+	margin: 0;
 	padding: 10px;
 	behavior: url(border-radius.htc);
 }
@@ -62,19 +62,13 @@ footer
 }
 header
 {
-	box-shadow: 0 0 5px 5px #f6f6f6;
 	background-color: #f6f6f6;
 	display: block;
-	height: 90px;
 	width: 99%;
 	left: 0px;
 	position: fixed;
 	top: 0px;
 	z-index: 500;
-	-khtml-box-shadow: 0 0 2px 5px #f6f6f6;
-	-moz-box-shadow: 0 0 2px 5px #f6f6f6;
-	-o-box-shadow: 0 0 2px 5px #f6f6f6;
-	-webkit-box-shadow: 0 0 2px 5px #f6f6f6;
 }
 legend
 {
@@ -540,7 +534,7 @@ input[type="text"]:disabled, textarea:disabled
 	background-color: #F6F6F6;
 	text-decoration: none;
 	padding: 10px;
-	/*transition: all .20s ease-in-out;*/
+	transition: all .20s ease-in-out;
 	-khtml-border-radius: 2px;
 	-khtml-box-shadow: 0 0 2px 2px #F6F6F6;
 	-khtml-transition: all .20s ease-in-out;
@@ -592,6 +586,11 @@ input[type="text"]:disabled, textarea:disabled
 	-moz-box-shadow: 0 0 2px 2px #FFF;
 	-o-box-shadow: 0 0 2px 2px #FFF;
 	-webkit-box-shadow: 0 0 2px 2px #FFF;
+}
+html>body #nav ul.licious
+{
+	position: absolute;	
+	top: 18px;
 }
 ul.tabbed li.navigation
 {
@@ -744,6 +743,7 @@ div.autocomplete ul li.selected
 	border: 1px solid #DDD;
 	left: 0;
 	top: 100px;
+	margin-top: -5px;
 	font-size: 0.87em;
 	position: absolute;
 	z-index: 100;
@@ -803,6 +803,7 @@ div.autocomplete ul li.selected
 	overflow: hidden;
 	position: absolute;
 	top: 100px;
+	margin-top: 5px;
 } 
 .scrollbar-track
 {
@@ -966,7 +967,7 @@ div.autocomplete ul li.selected
 /* IE 6 HACKS */
 .opentip
 {
-	z-index: 110;
+	z-index: 610;
 }
 .opentipIFrame
 {
@@ -977,10 +978,10 @@ div.autocomplete ul li.selected
 	background: none;
 	margin: 0;
 	padding: 0;
-	display:none;
- 	display:block;
- 	z-index:-1;
- 	filter:mask();
+	display: none;
+ 	display: block;
+ 	z-index: -1;
+ 	filter: mask();
 }
 /* CSS3 */
 .ot-container.ot-css3
@@ -1064,7 +1065,6 @@ div.autocomplete ul li.selected
 	box-shadow: 0 0 5px 5px rgba(15,15,15,0.1);
 	transition-duration: 0.35s;
 	transition-property: all, transform;
-	z-index: 25;
 	-khtml-border-radius: 4px;
 	-khtml-box-shadow: 0 0 5px 5px rgba(15,15,15,0.1);
 	-khtml-transition-duration: 0.35s;
