drop klout and opentip

--- a/public/css/z.css
+++ b/public/css/z.css
@@ -613,6 +613,7 @@ div.growls
 {
 	z-index: 2000;
 	position: fixed;
+	font-size: 0.8em;
 }
 div.growls.bottom-right
 {
@@ -826,215 +827,6 @@ div.autocomplete ul li.selected
 	position: relative;
 	overflow: hidden;
 	width: 100%;
-}
-
-/*
- * opentip stuff
- */
-.ot-container
-{
-	z-index: 600;
-	position: absolute;
-	max-width: 500px;
-}
-.ot-container.ot-fixed
-{
-	transition-duration: 0.2s, 0.2s;
-	transition-property: left, top;
-	-khtml-transition-duration: 0.2s, 0.2s;
-	-khtml-transition-property: left, top;
-	-moz-transition-duration: 0.2s, 0.2s;
-	-moz-transition-property: left, top;
-	-ms-transition-duration: 0.2s, 0.2s;
-	-ms-transition-property: left, top;
-	-o-transition-duration: 0.2s, 0.2s;
-	-o-transition-property: left, top;
-	-webkit-transition-duration: 0.2s, 0.2s;
-	-webkit-transition-property: left, top;
-}
-.ot-container.ot-completely-hidden
-{
-	display: none;
-}
-.opentip
-{
-	position: relative;
-	font-size: 13px;
-}
-.opentip .title   { font-weight: bold; }
-.opentip .content { width: auto !important;}
-.opentip .loadingIndication
-{
-	display: none;
-	padding: 10px 15px;
-	background: url("spinner.gif") center center no-repeat;
-	width: 25px;
-	height: 15px;
-}
-.opentip .loadingIndication span        { display: none; }
-.ot-loading .opentip .loadingIndication { display: block; }
-.ot-loading .opentip .content           { display: none; }
-.ot-container .stem-container
-{
-	position: absolute;
-	width: 0;
-	height: 0;
-}
-.ot-container .stem
-{
-	position: absolute;
-	overflow: hidden;
-	color: #cccccc;
-}
-.ot-container .left   { left: 0; }
-.ot-container .center { left: 50%; }
-.ot-container .right  { right: 0; }
-.ot-container .top    { top: 0; }
-.ot-container .middle { top: 50%; }
-.ot-container .bottom { bottom: 0; }
-/* Styles */
-.style-klout .opentip
-{
-	box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
-	background-color: #E44503;
-	border: 1px solid #E44503;
-	border-radius: 5px;
-	color: white;
-	padding: 6px;
-	-khtml-border-radius: 4px;
-	-khtml-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
-	-moz-border-radius: 5px;
-	-moz-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
-	-o-border-radius: 5px;
-	-o-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
-	-webkit-border-radius: 5px;
-	-webkit-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
-	behavior: url(border-radius.htc);
-
-}
-.style-klout .opentip .title
-{
-	margin-bottom: 1px;
-}
-.style-klout .stem
-{
- 	color: #E44503;
-}
-.style-klout .canvas
-{
-	background-color: rgba(255, 241, 143, 0.5);
-	color: #a2932B;
-}
-.style-user .opentip
-{
-	box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
-	background: white;
-	border: 1px solid white;
-	border-radius: 5px;
-	padding: 6px;
-	-khtml-border-radius: 4px;
-	-khtml-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
-	-moz-border-radius: 5px;
-	-moz-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
-	-o-border-radius: 5px;
-	-o-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
-	-webkit-border-radius: 5px;
-	-webkit-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
-	behavior: url(border-radius.htc);
-}
-.style-user .opentip .title
-{
-	color: #316F89;
-}
-.style-user .opentip .content
-{
-	color: #333333;
-}
-.style-user .stem
-{
-	color: #ffffff;
-}
-.style-user .canvas
-{
-	background-color: #F7BA00;
-}
-/* IE 6 HACKS */
-.opentip
-{
-	z-index: 610;
-}
-.opentipIFrame
-{
-	position: absolute;
-	top: 0;
-	left: 0;
-	border: none;
-	background: none;
-	margin: 0;
-	padding: 0;
-	display: none;
- 	display: block;
- 	z-index: -1;
- 	filter: mask();
-}
-/* CSS3 */
-.ot-container.ot-css3
-{
-	-khtml-transition-duration: 1s;
-	-khtml-transition-property: opacity, -khtml-transform;
-	-moz-transition-duration: 1s;
-	-moz-transition-property: opacity, -moz-transform;
-	-ms-transition-duration: 1s;
-	-ms-transition-property: opacity, -moz-transform;
-	-o-transition-duration: 1s;
-	-o-transition-property: opacity, -moz-transform;
-	-webkit-transition-duration: 1s;
-	-webkit-transition-property: opacity, -webkit-transform;
-	transition-duration: 1s;
-	transition-property: opacity, transform;
-	opacity: 1;
-}
-.ot-container.ot-css3.ot-completely-hidden
-{
-	display: none;
-}
-.ot-container.ot-css3.ot-becoming-visible.ot-show-appear,
-.ot-container.ot-css3.ot-hidden.ot-hide-fade
-{
-	opacity: 0;
-}
-.ot-container.ot-css3.ot-becoming-visible.ot-show-grow,
-.ot-container.ot-css3.ot-hidden.ot-hide-shrink
-{
-	transform: scale(0);
-	-khtml-transform: scale(0);
-	-moz-transform: scale(0);
-	-ms-transform: scale(0);
-	-o-transform: scale(0);
-	-webkit-transform: scale(0);
-}
-.ot-container.ot-css3.ot-becoming-visible.ot-show-blindDown,
-.ot-container.ot-css3.ot-becoming-visible.ot-show-slideDown,
-.ot-container.ot-css3.ot-hidden.ot-hide-blindUp
-{
-	transform: scaleY(0);
-	-khtml-transform: scaleY(0);
-	-moz-transform: scaleY(0);
-	-ms-transform: scaleY(0);
-	-o-transform: scaleY(0);
-	-webkit-transform: scaleY(0);
-	opacity: 0;
-}
-.ot-container.ot-css3.ot-becoming-visible.ot-show-condense,
-.ot-container.ot-css3.ot-hidden.ot-hide-puff
-{
-	transform: scale(5);
-	-khtml-transform: scale(5);
-	-moz-transform: scale(5);
-	-ms-transform: scale(5);
-	-o-transform: scale(5);
-	-webkit-transform: scale(5);
-	opacity: 0;
 }
 
 /*
