--- a/views/index.jade
+++ b/views/index.jade
@@ -1,16 +1,11 @@
-.z
-  br
-  br
-  br
-  br
-  br
-  br
-  br
-  br
-  h1 Z
-
-.login-inner(id='login')
-  a(href='/oauth/login')
-    img(src='/img/login.png', alt='')
-
-script $("login").center(82);
+.center-outer
+  .center-inner
+    h1 z
+    br
+    br
+    a(href='/oauth/login')
+      img(src='/img/login.png', alt='')
+    br
+    br
+    a(href='http://github.com/disassemblyline/z', target='_blank')
+      the code is available on github
