--- a/public/css/z.css
+++ b/public/css/z.css
@@ -774,9 +774,19 @@ div.autocomplete ul li.selected
 	right: 0;
 	z-index: -1;
 }
-.login-inner
+.center-outer
+{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+}
+.center-inner
 {
 	display: inline-block;
+	width: 100%;
+	height: 100%;
+	padding: 17% 0%;
 }
 .login-inner img
 {
@@ -802,15 +812,6 @@ div.autocomplete ul li.selected
 	-webkit-box-shadow: 0 0 5px 5px rgba(15,15,15,0.1);
 	-webkit-transition-duration: 0.35s;
 	-webkit-transition-property: all, -webkit-transform;
-}
-.login-inner img:hover
-{
-	transform: scale(1.15);
-	-khtml-transform: scale(1.15);
-	-moz-transform: scale(1.15);
-	-ms-transform: scale(1.15);
-	-o-transform: scale(1.15);
-	-webkit-transform: scale(1.15);
 }
 .klout
 {
