--- a/views/home.jade
+++ b/views/home.jade
@@ -12,6 +12,8 @@ header(class='comment-list-wrapper')
         span#paused-count(style='display: none;') (0)
       li(style='float: right;', class='navigation')
         div#progress-bar(style='display: none;')
+      li(style='float: right;', class='navigation')
+        img#loading-img(src='/img/spinner.gif')
     ul#tabbed(class='tabbed')
       li(class='navigation')
         a#home-timeline-click(href='#home-timeline-container')
@@ -26,9 +28,6 @@ header(class='comment-list-wrapper')
       li
         input#new-dm-user(type='text', maxlength='15', class='dm-user dm', style='display: none;')
         #autocompleter-dm(class='autocomplete', style='font-size: 0.8em; width: 100%; display: none;')
-    ul#loading
-      li(style='text-align: center; margin-top: 2px;', class='navigation')
-        img(src='/img/spinner.gif')
     .clearer &nbsp;
   form#new-tweet-form(autocomplete='off')
     //textarea#new-tweet(disabled='disabled', style='width: 98.5%; overflow: hidden;', rows='1', value='loading...')
