--- a/views/home.jade
+++ b/views/home.jade
@@ -13,7 +13,7 @@ header(class='comment-list-wrapper')
       li(style='float: right;', class='navigation')
         div#progress-bar(style='display: none;')
       li(style='float: right;', class='navigation')
-        img#loading-img(src='/img/spinner.gif')
+        img#loading(src='/img/spinner.gif')
     ul#tabbed(class='tabbed')
       li(class='navigation')
         a#home-timeline-click(href='#home-timeline-container')
