might bring back the shadow later, it looks nicer without it though :)

--- a/views/home.jade
+++ b/views/home.jade
@@ -30,8 +30,8 @@ header(class='comment-list-wrapper')
         #autocompleter-dm(class='autocomplete', style='font-size: 0.8em; width: 100%; display: none;')
     .clearer &nbsp;
   form#new-tweet-form(autocomplete='off')
-    //textarea#new-tweet(disabled='disabled', style='width: 98.5%; overflow: hidden;', rows='1', value='loading...')
-    input#new-tweet(type='text', disabled='disabled', style='width: 98.5%;', value='loading...')
+    //textarea#new-tweet(disabled='disabled', style='width: 98.5%; overflow: hidden;', rows='1', value='...')
+    input#new-tweet(type='text', disabled='disabled', style='width: 98.5%;', value='...')
     #autocompleter(class='autocomplete', style='width: 98%; display: none;')
 
 #container(class='comment-list-wrapper')
