--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@
     br
     br
     a(href='/oauth/login')
-      img(src='/img/login.png', alt='')
+      img#login(src='/img/login.png', alt='')
     br
     br
     a(href='http://github.com/disassemblyline/z', target='_blank')
