drop socket.io-client from libs.js (include it in home.jade, change some settings around for sockets to allow for production / developement settings just like express does. also change some config.json stuff around to make more sense right off the bat (eg, ignore redis_* vars if you are using memory to store sessions). additional serverside sanity.

--- a/views/home.jade
+++ b/views/home.jade
@@ -85,6 +85,7 @@ header(class='comment-list-wrapper')
     input#use-geo(type='checkbox')
     span#geo-settings
 
+script(src='/socket.io/socket.io.js')
 script(src='/socket.io/socket.io-sessions.js?'+(new Date()).getTime())
 script var growler = new Growler(); z_engine_attrition();
 script= imgur_script
